1) Import java classes from xercesImpl.jar to support use of XMLGregorianCalendarImpl class which is no longer distributed 2) Refactor WATER_SERVICE label to read "WATER_SERVICE"